--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SC4Parser"]
 	path = SC4Parser
-	url = https://github.com/Killeroo/SC4Parser
+	url = https://github.com/h3ndofry/SC4Parser
